2007-06-09  Bruno coudoin  <bruno.coudoin@free.fr>

	- Added the support for a system configuration file which is
	  under /etc/gcompris.conf on GNU/Linux and in it's root installation
	  directory on Windows.
	  This file if present is loaded after the user one so it overwrite the user
	  properties.

	* config.h.mingw.in:
	* configure.in:
	* src/gcompris/about.c: (gc_about_start):
	* src/gcompris/gcompris.c: (gc_activation_check), (main):
	* src/gcompris/properties.c: (gc_prop_old_config_migration),
	(gc_prop_load):
	* src/gcompris/properties.h:

2007-06-09  Bruno coudoin  <bruno.coudoin@free.fr>


	* boards/sounds/wahoo.wav: removed this sound, suspect origin
	* src/boards/paratrooper.c: (next_state):
	* src/gcompris/bonus.c: (gc_bonus_display):

2007-06-09  Bruno coudoin  <bruno.coudoin@free.fr>

	Major rework of activity icons by  Mathieu Ignacio.
	These Images are an original creation of Mathieu Ignacio. Released under GPL.
	Starting now, we switch to the svg format.

	* boards/advanced_colors.xml.in:
	* boards/algebra_by.xml.in:
	* boards/algebra_group.xml.in:
	* boards/algebra_guesscount.xml.in:
	* boards/algebra_minus.xml.in:
	* boards/algebra_plus.xml.in:
	* boards/algebramenu.xml.in:
	* boards/algorithm.xml.in:
	* boards/anim.xml.in:
	* boards/awele.xml.in:
	* boards/babymatch.xml.in:
	* boards/babyshapes.xml.in:
	* boards/ballcatch.xml.in:
	* boards/bargame.xml.in:
	* boards/billard.xml.in:
	* boards/canal_lock.xml.in:
	* boards/chat.xml.in:
	* boards/chess.xml.in:
	* boards/chess_computer.xml.in:
	* boards/chess_movelearn.xml.in:
	* boards/chess_partyend.xml.in:
	* boards/chronos.xml.in:
	* boards/click_on_letter.xml.in:
	* boards/clickanddraw.xml.in:
	* boards/clickgame.xml.in:
	* boards/clockgame.xml.in:
	* boards/colors.xml.in:
	* boards/colors_group.xml.in:
	* boards/computer.xml.in:
	* boards/connect4-2players.xml.in:
	* boards/connect4.xml.in:
	* boards/crane.xml.in:
	* boards/discovery.xml.in:
	* boards/doubleentry.xml.in:
	* boards/draw.xml.in: