@@ -110,7 +110,7 @@
 #define PACKAGE_LOCALE_DIR "share/locale"
 
 /* System GCompris config directory */
-#define SYSTEM_CONFIG_DIR .
+#define SYSTEM_CONFIG_DIR "."
 
 /* Define to the full name of this package. */
 #define PACKAGE_NAME ""
