@@ -2,7 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(src/gcompris/gcompris.c)
 AC_CANONICAL_TARGET
-AM_INIT_AUTOMAKE(gcompris, 8.3.1)
+AM_INIT_AUTOMAKE(gcompris, 8.4BETA1)
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
