@@ -220,7 +220,6 @@ src/boards/click_on_letter.c
 src/boards/clickgame.c
 src/boards/clockgame.c
 src/boards/colors.c
-src/boards/draw.c
 src/boards/enumerate.c
 src/boards/erase.c
 src/boards/fifteen.c
